force-app/main/default/objects/CCR_DeviceWarranty__mdt/CCR_DeviceWarranty__mdt.object-meta.xml
<CustomObject>
    <description>Used By: CCR 
Description: It&apos;s to store information about all numbers needed to calculate warranty for the device during linking process.</description>
    <label>Device Warranty</label>
    <pluralLabel>Device Warranties</pluralLabel>
</CustomObject>