force-app/main/default/objects/CCR_DeviceWarranty__mdt/fields/CCR_Market__c.field-meta.xml
<CustomField>
    <fullName>CCR_Market__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information about the market for which configuration is done.</description>
    <label>Market</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
</CustomField>