force-app/main/default/objects/CCR_DeviceWarranty__mdt/fields/CCR_MinimumWarrantyPeriod__c.field-meta.xml
<CustomField>
    <fullName>CCR_MinimumWarrantyPeriod__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information about minimum warranty period in months.</description>
    <label>Minimum Warranty Period</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>