force-app/main/default/objects/CCR_DeviceWarranty__mdt/fields/CCR_Model__c.field-meta.xml
<CustomField>
    <fullName>CCR_Model__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s used to store information about the model.</description>
    <label>Model</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>