force-app/main/default/objects/CCR_DeviceWarranty__mdt/fields/CCR_StandardWarrantyPeriod__c.field-meta.xml
<CustomField>
    <fullName>CCR_StandardWarrantyPeriod__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information about standard warranty period in months.</description>
    <label>Standard Warranty Period (months)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>