force-app/main/default/objects/CCR_DeviceWarranty__mdt/fields/CCR_Subscribed_Device__c.field-meta.xml
<CustomField>
    <fullName>CCR_Subscribed_Device__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by: CCR. 
Description: It&apos;s used to store information about the device subscription.</description>
    <label>Subscribed Device</label>
    <type>Checkbox</type>
</CustomField>