force-app/main/default/objects/CCR_DeviceWarranty__mdt/fields/CCR_TimeEstimatedFromProductionToSellin__c.field-meta.xml
<CustomField>
    <fullName>CCR_TimeEstimatedFromProductionToSellin__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information about period in months which will be calculated from production date in case purchase date is empty.</description>
    <label>Time Estimated From Production To Sellin</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>