force-app/main/default/objects/CCR_DeviceWarranty__mdt/fields/CCR_TimeToRegisterDeviceAfterPurchase__c.field-meta.xml
<CustomField>
    <fullName>CCR_TimeToRegisterDeviceAfterPurchase__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information about the period when consumer should register the device to get warranty extension - it&apos;s in DAYS.</description>
    <label>Time To Register Device After Purchase</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>