force-app/main/default/objects/CCR_DeviceWarranty__mdt/fields/CCR_WarrantyExtensionIfRegisterInTime__c.field-meta.xml
<CustomField>
    <fullName>CCR_WarrantyExtensionIfRegisterInTime__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information about warranty extension period if consumer register his device in time.</description>
    <label>Warranty Extension If Register In Time</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>